Fix search autocomplete z-index

--- a/ckanext/sprout/assets/css/custom.css
+++ b/ckanext/sprout/assets/css/custom.css
@@ -371,12 +371,15 @@ a:hover {
 }
 .navbar {
   position: relative;
-  z-index: 999;
+  z-index: 100;
 }
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #1d6919;
+}
+.autocomplete-items {
+  z-index: 1000;
 }
 .btn-primary {
   color: #FFFFFF;
