--- a/ckanext/sprout/assets/less/_nav.less
+++ b/ckanext/sprout/assets/less/_nav.less
@@ -104,11 +104,15 @@
 
 .navbar {
   position: relative;
-  z-index: 999;
+  z-index: 100;
 }
 
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #1d6919;
+}
+
+.autocomplete-items {
+  z-index: 1000;
 }
